@@ -182,6 +182,144 @@ ATF_TEST_CASE_BODY(ui__screen_width__cached)
 }
 
 
+ATF_TEST_CASE_WITHOUT_HEAD(ui__err__no_refill);
+ATF_TEST_CASE_BODY(ui__err__no_refill)
+{
+    cmdline::ui_mock ui(100);
+    ui.err("This is a short message");
+    ATF_REQUIRE_EQ(1, ui.err_log().size());
+    ATF_REQUIRE_EQ("This is a short message", ui.err_log()[0]);
+    ATF_REQUIRE(ui.out_log().empty());
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__err__refill);
+ATF_TEST_CASE_BODY(ui__err__refill)
+{
+    cmdline::ui_mock ui(16);
+    ui.err("This is a short message");
+    ATF_REQUIRE_EQ(2, ui.err_log().size());
+    ATF_REQUIRE_EQ("This is a short", ui.err_log()[0]);
+    ATF_REQUIRE_EQ("message", ui.err_log()[1]);
+    ATF_REQUIRE(ui.out_log().empty());
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__out__no_refill);
+ATF_TEST_CASE_BODY(ui__out__no_refill)
+{
+    cmdline::ui_mock ui(100);
+    ui.out("This is a short message");
+    ATF_REQUIRE(ui.err_log().empty());
+    ATF_REQUIRE_EQ(1, ui.out_log().size());
+    ATF_REQUIRE_EQ("This is a short message", ui.out_log()[0]);
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__out__refill);
+ATF_TEST_CASE_BODY(ui__out__refill)
+{
+    cmdline::ui_mock ui(16);
+    ui.out("This is a short message");
+    ATF_REQUIRE(ui.err_log().empty());
+    ATF_REQUIRE_EQ(2, ui.out_log().size());
+    ATF_REQUIRE_EQ("This is a short", ui.out_log()[0]);
+    ATF_REQUIRE_EQ("message", ui.out_log()[1]);
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__err_tag__no_refill);
+ATF_TEST_CASE_BODY(ui__err_tag__no_refill)
+{
+    cmdline::ui_mock ui(100);
+    ui.err_tag("Some long tag: ", "This is a short message");
+    ATF_REQUIRE_EQ(1, ui.err_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short message", ui.err_log()[0]);
+    ATF_REQUIRE(ui.out_log().empty());
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__err_tag__refill__repeat);
+ATF_TEST_CASE_BODY(ui__err_tag__refill__repeat)
+{
+    cmdline::ui_mock ui(32);
+    ui.err_tag("Some long tag: ", "This is a short message");
+    ATF_REQUIRE_EQ(2, ui.err_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short", ui.err_log()[0]);
+    ATF_REQUIRE_EQ("Some long tag: message", ui.err_log()[1]);
+    ATF_REQUIRE(ui.out_log().empty());
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__err_tag__refill__no_repeat);
+ATF_TEST_CASE_BODY(ui__err_tag__refill__no_repeat)
+{
+    cmdline::ui_mock ui(32);
+    ui.err_tag("Some long tag: ", "This is a short message", false);
+    ATF_REQUIRE_EQ(2, ui.err_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short", ui.err_log()[0]);
+    ATF_REQUIRE_EQ("               message", ui.err_log()[1]);
+    ATF_REQUIRE(ui.out_log().empty());
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__err_tag__tag_too_long);
+ATF_TEST_CASE_BODY(ui__err_tag__tag_too_long)
+{
+    cmdline::ui_mock ui(5);
+    ui.err_tag("Some long tag: ", "This is a short message");
+    ATF_REQUIRE_EQ(1, ui.err_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short message", ui.err_log()[0]);
+    ATF_REQUIRE(ui.out_log().empty());
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__out_tag__no_refill);
+ATF_TEST_CASE_BODY(ui__out_tag__no_refill)
+{
+    cmdline::ui_mock ui(100);
+    ui.out_tag("Some long tag: ", "This is a short message");
+    ATF_REQUIRE(ui.err_log().empty());
+    ATF_REQUIRE_EQ(1, ui.out_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short message", ui.out_log()[0]);
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__out_tag__refill__repeat);
+ATF_TEST_CASE_BODY(ui__out_tag__refill__repeat)
+{
+    cmdline::ui_mock ui(32);
+    ui.out_tag("Some long tag: ", "This is a short message");
+    ATF_REQUIRE(ui.err_log().empty());
+    ATF_REQUIRE_EQ(2, ui.out_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short", ui.out_log()[0]);
+    ATF_REQUIRE_EQ("Some long tag: message", ui.out_log()[1]);
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__out_tag__refill__no_repeat);
+ATF_TEST_CASE_BODY(ui__out_tag__refill__no_repeat)
+{
+    cmdline::ui_mock ui(32);
+    ui.out_tag("Some long tag: ", "This is a short message", false);
+    ATF_REQUIRE(ui.err_log().empty());
+    ATF_REQUIRE_EQ(2, ui.out_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short", ui.out_log()[0]);
+    ATF_REQUIRE_EQ("               message", ui.out_log()[1]);
+}
+
+
+ATF_TEST_CASE_WITHOUT_HEAD(ui__out_tag__tag_too_long);
+ATF_TEST_CASE_BODY(ui__out_tag__tag_too_long)
+{
+    cmdline::ui_mock ui(5);
+    ui.out_tag("Some long tag: ", "This is a short message");
+    ATF_REQUIRE(ui.err_log().empty());
+    ATF_REQUIRE_EQ(1, ui.out_log().size());
+    ATF_REQUIRE_EQ("Some long tag: This is a short message", ui.out_log()[0]);
+}
+
+
 ATF_TEST_CASE_WITHOUT_HEAD(ui__out_table__empty);
 ATF_TEST_CASE_BODY(ui__out_table__empty)
 {
@@ -283,6 +421,18 @@ ATF_INIT_TEST_CASES(tcs)
     ATF_ADD_TEST_CASE(tcs, ui__screen_width__tty_is_file);
     ATF_ADD_TEST_CASE(tcs, ui__screen_width__cached);
 
+    ATF_ADD_TEST_CASE(tcs, ui__err__no_refill);
+    ATF_ADD_TEST_CASE(tcs, ui__err__refill);
+    ATF_ADD_TEST_CASE(tcs, ui__out__no_refill);
+    ATF_ADD_TEST_CASE(tcs, ui__out__refill);
+    ATF_ADD_TEST_CASE(tcs, ui__err_tag__no_refill);
+    ATF_ADD_TEST_CASE(tcs, ui__err_tag__refill__repeat);
+    ATF_ADD_TEST_CASE(tcs, ui__err_tag__refill__no_repeat);
+    ATF_ADD_TEST_CASE(tcs, ui__err_tag__tag_too_long);
+    ATF_ADD_TEST_CASE(tcs, ui__out_tag__no_refill);
+    ATF_ADD_TEST_CASE(tcs, ui__out_tag__refill__repeat);
+    ATF_ADD_TEST_CASE(tcs, ui__out_tag__refill__no_repeat);
+    ATF_ADD_TEST_CASE(tcs, ui__out_tag__tag_too_long);
     ATF_ADD_TEST_CASE(tcs, ui__out_table__empty);
     ATF_ADD_TEST_CASE(tcs, ui__out_table__not_empty);
 
